# week1

./: .env.example  .gitignore  README.md  app.bkup  app.py  pyproject.toml  requirements.txt
